dark mode fixes

--- a/docs/style.scss
+++ b/docs/style.scss
@@ -93,15 +93,16 @@ body {
         width: 35px; 
         height: 35px;
         transition: transform 0.3s ease, filter 0.3s ease;
+        filter: brightness(80%); 
     }
 
     &:hover img {
-        transform: scale(1.1); // Slightly enlarges the icon
-        filter: brightness(80%); // Makes it slightly darker
+        transform: scale(1.1); 
+        filter: brightness(100%); 
     }
 
     &:active img {
-        transform: scale(0.95); // Gives a click feedback effect
+        transform: scale(0.95); 
     }
 }
 
